# sfmlutils

./: CMakeLists.txt  README.md  conanfile.py
include/sfmlutils/: App.h  Object.h
src/: App.cpp  main.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
